
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef unsigned long u_long ;
struct hostent {int h_length; int h_addr; } ;


 struct hostent* gethostbyname (char*) ;
 unsigned long inet_addr (char*) ;
 int memcpy (unsigned long*,int ,int ) ;

u_long res(char *p)
{
 struct hostent * h;
    unsigned long int rv;

    if ( (rv=inet_addr(p)) != -1 ) return rv;
    if( (h=gethostbyname(p)) != ((void*)0) ) {
         memcpy( &rv,h->h_addr,h->h_length );
         return ( rv );
    }
    return( -1 );
}
