; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_25321.c_res.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_25321.c_res.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hostent = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @res(i8* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.hostent*, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call i64 @inet_addr(i8* %6)
  store i64 %7, i64* %5, align 8
  %8 = icmp ne i64 %7, -1
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load i64, i64* %5, align 8
  store i64 %10, i64* %2, align 8
  br label %25

11:                                               ; preds = %1
  %12 = load i8*, i8** %3, align 8
  %13 = call %struct.hostent* @gethostbyname(i8* %12)
  store %struct.hostent* %13, %struct.hostent** %4, align 8
  %14 = icmp ne %struct.hostent* %13, null
  br i1 %14, label %15, label %24

15:                                               ; preds = %11
  %16 = load %struct.hostent*, %struct.hostent** %4, align 8
  %17 = getelementptr inbounds %struct.hostent, %struct.hostent* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.hostent*, %struct.hostent** %4, align 8
  %20 = getelementptr inbounds %struct.hostent, %struct.hostent* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @memcpy(i64* %5, i32 %18, i32 %21)
  %23 = load i64, i64* %5, align 8
  store i64 %23, i64* %2, align 8
  br label %25

24:                                               ; preds = %11
  store i64 -1, i64* %2, align 8
  br label %25

25:                                               ; preds = %24, %15, %9
  %26 = load i64, i64* %2, align 8
  ret i64 %26
}

declare dso_local i64 @inet_addr(i8*) #1

declare dso_local %struct.hostent* @gethostbyname(i8*) #1

declare dso_local i32 @memcpy(i64*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
